--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,10 +143,10 @@ jobs:
       - name: Start backend
         run: cd backend && poetry run python3 ./manage.py runserver > /dev/null 2>&1 &
 
-      - name: Setup Node.js 20
+      - name: Setup Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: yarn
           cache-dependency-path: frontend/yarn.lock
       - name: Install frontend dependencies
@@ -226,7 +226,6 @@ jobs:
               for r in wine/*.reg; do regedit $r; done && \
               poetry run python manage.py test'
 
-
   backend_test_docker_prod:
     name: backend tests (docker prod)
     runs-on: ubuntu-24.04
@@ -305,6 +304,7 @@ jobs:
         run: |
           docker compose -f docker-compose.prod.yaml up -d postgres nginx
           timeout 15s docker compose -f docker-compose.prod.yaml logs -f || true
+          docker compose logs nginx | grep "ready for start up"
 
       - name: Build and bring up up backend container
         run: |
@@ -327,10 +327,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Node.js 20
+      - name: Setup Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: yarn
           cache-dependency-path: frontend/yarn.lock
       - name: Install frontend dependencies
