--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -13,19 +13,30 @@ server {
 
 # {{HTTPS_SERVER_BLOCK_START}}
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name decomp.me www.decomp.me;
-
-    client_max_body_size 5M;
 
     root /var/www/decomp.me;
     index index.html;
 
+    error_page 502 /down.html;
+
+    proxy_connect_timeout 3s;
+    proxy_send_timeout 10s;
+    proxy_read_timeout 60s;
+
+    # Hardening
+    client_max_body_size 5M;
+    ignore_invalid_headers on;
+
+    # SSL
     ssl_certificate /etc/letsencrypt/live/decomp.me/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/decomp.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # Compression
     brotli on;
     brotli_static on;
     brotli_types application/atom+xml application/javascript application/json application/rss+xml
@@ -33,12 +44,6 @@ server {
                  application/x-font-ttf application/x-javascript application/xhtml+xml application/xml
                  font/eot font/opentype font/otf font/truetype image/svg+xml image/vnd.microsoft.icon
                  image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
-
-    error_page 502 /down.html;
-
-    proxy_connect_timeout 3s;
-    proxy_send_timeout 10s;
-    proxy_read_timeout 60s;
 
     location / {
         try_files /dummy.html @proxy_frontend;
