--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,6 +290,8 @@ jobs:
 
       - name: Setup dummy docker.prod.dev
         run: |
+          echo 'POSTGRES_USER=decompme' >> docker.prod.env
+          echo 'POSTGRES_PASSWORD=decompme' >> docker.prod.env
           echo 'SECRET_KEY=secret-key-secret-key-secret-key-secret-key-secret-key-secret-key' >> docker.prod.env
           echo 'DATABASE_URL=psql://decompme:decompme@postgres:5432/decompme' >> docker.prod.env
           echo 'SANDBOX_DISABLE_PROC="true"' >> docker.prod.env
