--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -4,6 +4,7 @@ server {
     listen 80;
     listen [::]:80;
     client_max_body_size 5M;
+    client_body_buffer_size 1M;
 
     server_name decomp.local www.decomp.local;
 
@@ -25,6 +26,8 @@ server {
     }
 
     location @proxy_api {
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -34,6 +37,8 @@ server {
     }
 
     location @proxy_frontend {
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
