--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -30,6 +30,11 @@ server {
     client_max_body_size 5M;
     ignore_invalid_headers on;
 
+    # Increase caches to avoid disk writes
+    client_body_buffer_size 1M;
+    proxy_buffers 16 64k;
+    proxy_buffer_size 128k;
+
     # SSL
     ssl_certificate /etc/letsencrypt/live/decomp.me/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/decomp.me/privkey.pem;
@@ -68,6 +73,8 @@ server {
     }
 
     location @proxy_api {
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -77,6 +84,8 @@ server {
     }
 
     location @proxy_frontend {
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
