Allow 512k in-flight before buffering data to disk

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -32,8 +32,9 @@ server {
 
     # Increase caches to avoid disk writes
     client_body_buffer_size 1M;
-    proxy_buffers 16 64k;
+    proxy_buffers 8 128k;
     proxy_buffer_size 128k;
+    proxy_busy_buffers_size 512k;
 
     # SSL
     ssl_certificate /etc/letsencrypt/live/decomp.me/fullchain.pem;
