Increase resources available to postgres

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -96,6 +96,16 @@ services:
       - ./pgdump:/pgdump
     networks:
       - decompme
+    command: >
+      postgres
+      -c shared_buffers=8GB
+      -c work_mem=128MB
+      -c maintenance_work_mem=2GB
+      -c effective_cache_size=16GB
+      -c wal_buffers=32MB
+      -c checkpoint_completion_target=0.9
+      -c random_page_cost=1.1
+      -c effective_io_concurrency=300
 
 networks:
   decompme:
