--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -30,11 +30,11 @@ server {
     client_max_body_size 5M;
     ignore_invalid_headers on;
 
-    # Increase caches to avoid disk writes
+    # Increase buffers to avoid disk writes
     client_body_buffer_size 1M;
-    proxy_buffers 8 128k;
-    proxy_buffer_size 128k;
-    proxy_busy_buffers_size 512k;
+    proxy_buffers 16 256k;
+    proxy_buffer_size 256k;
+    proxy_busy_buffers_size 1M;
 
     # SSL
     ssl_certificate /etc/letsencrypt/live/decomp.me/fullchain.pem;
