--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -43,13 +43,22 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # Compression
-    brotli on;
-    brotli_static on;
-    brotli_types application/atom+xml application/javascript application/json application/rss+xml
-                 application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype
-                 application/x-font-ttf application/x-javascript application/xhtml+xml application/xml
-                 font/eot font/opentype font/otf font/truetype image/svg+xml image/vnd.microsoft.icon
-                 image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
+    gzip on;
+    gzip_static on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        application/javascript
+        application/json
+        application/xml
+        image/png
+        image/svg+xml
+        text/css
+        text/html
+        text/plain
+        text/xml;
 
     location / {
         try_files /dummy.html @proxy_frontend;
