Add latency_log to nginx

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -11,11 +11,21 @@ server {
     }
 }
 
+log_format latency_log '$http_cf_connecting_ip - [$remote_addr | $time_local] '
+                       '"$request" $status $body_bytes_sent '
+                       '"$http_referer" "$http_user_agent" '
+                       'rt=$request_time '
+                       'urt=$upstream_response_time '
+                       'uht=$upstream_header_time '
+                       'uct=$upstream_connect_time'
+
 # {{HTTPS_SERVER_BLOCK_START}}
 server {
     listen 443 ssl;
     http2 on;
     server_name decomp.me www.decomp.me;
+
+    access_log /var/log/nginx/access.log latency_log;
 
     root /var/www/decomp.me;
     index index.html;
