Try to prevent cloudflare 'down' page

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -30,7 +30,7 @@ server {
     root /var/www/decomp.me;
     index index.html;
 
-    error_page 502 /down.html;
+    error_page 502 503 504 =200 /down.html;
 
     proxy_connect_timeout 3s;
     proxy_send_timeout 10s;
@@ -76,7 +76,7 @@ server {
 
     location /api {
         proxy_intercept_errors on;
-        error_page 502 503 504 = @backend_down;
+        error_page 502 503 504 =200 @backend_down;
         try_files /dummy.html @proxy_api;
     }
 
@@ -124,7 +124,7 @@ server {
     # Avoid returning HTML from the /api endpoint if backend is unavailable
     location @backend_down {
         default_type application/json;
-        return 503 '{}';
+        return 200 '{}';
     }
 }
 # {{HTTPS_SERVER_BLOCK_END}}
