--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -11,16 +11,26 @@ server {
     }
 }
 
+log_format latency_log '$http_cf_connecting_ip - [$remote_addr | $time_local] '
+                       '"$request" $status $body_bytes_sent '
+                       '"$http_referer" "$http_user_agent" '
+                       'rt=$request_time '
+                       'urt=$upstream_response_time '
+                       'uht=$upstream_header_time '
+                       'uct=$upstream_connect_time'
+
 # {{HTTPS_SERVER_BLOCK_START}}
 server {
     listen 443 ssl;
     http2 on;
     server_name decomp.me www.decomp.me;
 
+    access_log /var/log/nginx/access.log latency_log;
+
     root /var/www/decomp.me;
     index index.html;
 
-    error_page 502 /down.html;
+    error_page 502 503 504 =200 /down.html;
 
     proxy_connect_timeout 3s;
     proxy_send_timeout 10s;
@@ -30,11 +40,11 @@ server {
     client_max_body_size 5M;
     ignore_invalid_headers on;
 
-    # Increase caches to avoid disk writes
+    # Increase buffers to avoid disk writes
     client_body_buffer_size 1M;
-    proxy_buffers 8 128k;
-    proxy_buffer_size 128k;
-    proxy_busy_buffers_size 512k;
+    proxy_buffers 16 256k;
+    proxy_buffer_size 256k;
+    proxy_busy_buffers_size 1M;
 
     # SSL
     ssl_certificate /etc/letsencrypt/live/decomp.me/fullchain.pem;
@@ -43,13 +53,22 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # Compression
-    brotli on;
-    brotli_static on;
-    brotli_types application/atom+xml application/javascript application/json application/rss+xml
-                 application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype
-                 application/x-font-ttf application/x-javascript application/xhtml+xml application/xml
-                 font/eot font/opentype font/otf font/truetype image/svg+xml image/vnd.microsoft.icon
-                 image/x-icon image/x-win-bitmap text/css text/javascript text/plain text/xml;
+    gzip on;
+    gzip_static on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        application/javascript
+        application/json
+        application/xml
+        image/png
+        image/svg+xml
+        text/css
+        text/html
+        text/plain
+        text/xml;
 
     location / {
         try_files /dummy.html @proxy_frontend;
@@ -57,7 +76,7 @@ server {
 
     location /api {
         proxy_intercept_errors on;
-        error_page 502 503 504 = @backend_down;
+        error_page 502 503 504 =200 @backend_down;
         try_files /dummy.html @proxy_api;
     }
 
@@ -105,7 +124,7 @@ server {
     # Avoid returning HTML from the /api endpoint if backend is unavailable
     location @backend_down {
         default_type application/json;
-        return 503 '{}';
+        return 200 '{}';
     }
 }
 # {{HTTPS_SERVER_BLOCK_END}}
