--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -17,7 +17,7 @@ log_format latency_log '$http_cf_connecting_ip - [$remote_addr | $time_local] '
                        'rt=$request_time '
                        'urt=$upstream_response_time '
                        'uht=$upstream_header_time '
-                       'uct=$upstream_connect_time'
+                       'uct=$upstream_connect_time';
 
 # {{HTTPS_SERVER_BLOCK_START}}
 server {
