fixup down.html behaviour

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -75,8 +75,6 @@ server {
     }
 
     location /api {
-        proxy_intercept_errors on;
-        error_page 502 503 504 =200 @backend_down;
         try_files /dummy.html @proxy_api;
     }
 
@@ -93,6 +91,9 @@ server {
     }
 
     location @proxy_api {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 @backend_down;
+
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
@@ -104,6 +105,9 @@ server {
     }
 
     location @proxy_frontend {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 /down.html;
+
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
@@ -115,6 +119,9 @@ server {
     }
 
     location /_next/webpack-hmr {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 /down.html;
+
         proxy_pass http://frontend:8080/_next/webpack-hmr;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -124,7 +131,7 @@ server {
     # Avoid returning HTML from the /api endpoint if backend is unavailable
     location @backend_down {
         default_type application/json;
-        return 200 '{}';
+        return 200 '';
     }
 }
 # {{HTTPS_SERVER_BLOCK_END}}
