Apply down.html behaviour to dev docker setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,4 +49,5 @@ services:
       - "80:80"
     volumes:
       - ./nginx/development.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./frontend/down.html:/var/www/down.html:ro
       - ./backend/media:/media
