--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -6,6 +6,8 @@ server {
     client_max_body_size 5M;
     client_body_buffer_size 1M;
 
+    root /var/www/;
+
     server_name decomp.local www.decomp.local;
 
     location / {
@@ -26,6 +28,9 @@ server {
     }
 
     location @proxy_api {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 @backend_down;
+
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
@@ -37,6 +42,9 @@ server {
     }
 
     location @proxy_frontend {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 /down.html;
+
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_set_header X-Forwarded-Proto https;
@@ -48,9 +56,18 @@ server {
     }
 
     location /_next/webpack-hmr {
+        proxy_intercept_errors on;
+        error_page 502 503 504 =200 /down.html;
+
         proxy_pass http://frontend:8080/_next/webpack-hmr;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    # Avoid returning HTML from the /api endpoint if backend is unavailable
+    location @backend_down {
+        default_type application/json;
+        return 200 '';
     }
 }
