--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -7,7 +7,7 @@ COPY yarn.lock /frontend/
 
 WORKDIR /frontend
 
-RUN yarn install --frozen-lockfile
+RUN yarn install --immutable --immutable-cache
 
 COPY next-env.d.ts /frontend/
 COPY next.config.js /frontend/
