--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -56,7 +56,7 @@ COPY --from=builder /frontend/public ./public
 COPY --from=builder /frontend/.next ./.next
 COPY --from=builder /frontend/node_modules ./node_modules
 COPY --from=builder /frontend/package.json ./package.json
-COPY --from=builder /frontend/yarnrc.yml ./yarnrc.yml
+COPY --from=builder /frontend/.yarnrc.yml ./.yarnrc.yml
 
 ARG GIT_HASH=abc123
 ENV GIT_HASH=${GIT_HASH}
