--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -42,8 +42,7 @@ RUN until curl -s --head "${INTERNAL_API_BASE}" | grep "HTTP/" > /dev/null; do \
         sleep 1; \
     done
 
-RUN yarn build --no-lint
-
+RUN yarn build --no-lint && rm -rf .next/cache
 
 FROM node:22-alpine AS runner
 
@@ -52,6 +51,9 @@ WORKDIR /frontend
 ENV NODE_ENV=production
 
 # Copy only required files
+COPY --from=builder /frontend/package.json /frontend/
+COPY --from=builder /frontend/yarn.lock /frontend/
+
 COPY --from=builder /frontend/public ./public
 COPY --from=builder /frontend/.next ./.next
 COPY --from=builder /frontend/node_modules ./node_modules
