--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,9 @@ on:
   pull_request:
 jobs:
   backend_test_docker_dev:
-    name: backend tests (docker dev)
+    name: backend tests (docker dev container)
     runs-on: ubuntu-24.04
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       - name: Build decompme_backend image
@@ -51,8 +52,9 @@ jobs:
               poetry run python manage.py test'
 
   backend_test_docker_prod:
-    name: backend tests (docker prod)
+    name: backend tests (docker prod container)
     runs-on: ubuntu-24.04
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       - name: Build decompme_backend image
@@ -146,9 +148,18 @@ jobs:
           docker compose -f docker-compose.prod.yaml up -d frontend
           timeout 15s docker compose -f docker-compose.prod.yaml logs -f || true
 
+      - name: Sanity check the endpoints
+        run: |
+          curl --silent http://localhost:8080/ | head -c 256
+          curl --silent http://localhost:8000/api/ | jq
+
       - name: Shut everything down
         run: |
           docker compose -f docker-compose.prod.yaml down
+
+      - name: Print out image sizes
+        run: |
+          docker image ls
 
   frontend_lint:
     name: biome
@@ -162,9 +173,13 @@ jobs:
           cache: yarn
           cache-dependency-path: frontend/yarn.lock
       - name: Install frontend dependencies
-        run: cd frontend && yarn --frozen-lockfile
+        run: |
+          cd frontend
+          yarn --frozen-lockfile
       - name: Run Biome
-        run: cd frontend && yarn lint
+        run: |
+          cd frontend
+          yarn lint
 
   mypy:
     name: mypy
