Enable sentry.io in frontend (#1607)
* Enable sentry.io in frontend

* Skip housekeeping.py when running in CI

* tweaks

* remove .yarn/install-state.gz

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,7 @@ jobs:
           echo 'SANDBOX_DISABLE_PROC="true"' >> docker.prod.env
           echo 'ALLOWED_HOSTS="backend,localhost,127.0.0.1"' >> docker.prod.env
           echo 'USE_SANDBOX_JAIL="on"' >> docker.prod.env
+          echo 'CI=true' >> docker.prod.env
 
       - name: Comment out SSL server configuration from nginx
         run: |
@@ -135,6 +136,7 @@ jobs:
           docker compose -f docker-compose.prod.yaml up -d postgres nginx
           timeout 15s docker compose -f docker-compose.prod.yaml logs -f || true
           docker compose logs nginx | grep "ready for start up"
+          ! docker compose logs nginx | grep -q "nginx-1 exited with code"
 
       - name: Build and bring up up backend container
         run: |
