Re-enable brotli in nginx

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -63,8 +63,18 @@ server {
         application/javascript
         application/json
         application/xml
-        image/png
-        image/svg+xml
+        text/css
+        text/plain
+        text/xml;
+
+    brotli on;
+    brotli_static on;
+    brotli_comp_level 5;
+    brotli_min_length 256;
+    brotli_types
+        application/javascript
+        application/json
+        application/xml
         text/css
         text/plain
         text/xml;
