--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
         "dotenv": "^16.4.5",
         "downshift": "9.0.9",
         "fast-myers-diff": "^3.2.0",
-        "framer-motion": "12.0.0-alpha.1",
+        "framer-motion": "12.18.1",
         "is-dark-color": "^1.2.0",
         "memoize-one": "^6.0.0",
         "next": "15.3.3",
