Remove 'git' requirement from library downloader

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,6 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         ca-certificates \
         curl \
-        git \
         python-is-python3 \
         python3 \
         python3-pip \
@@ -33,6 +32,7 @@ RUN apt-get -y update && apt-get install -y \
         flex \
         g++ \
         gcc \
+        git \
         libnl-route-3-dev \
         libprotobuf-dev \
         libtool \
@@ -123,6 +123,8 @@ USER ubuntu
 RUN wineboot --init
 
 WORKDIR /backend
+
+ENV POETRY_VIRTUALENVS_PATH=/backend/virtualenvs
 
 ARG ENABLE_DREAMCAST_SUPPORT
 ARG ENABLE_GBA_SUPPORT
