--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,12 +35,12 @@
         "clsx": "^2.1.1",
         "codemirror": "^6.0.1",
         "dotenv": "^16.4.5",
-        "downshift": "9.0.8",
+        "downshift": "9.0.9",
         "fast-myers-diff": "^3.2.0",
-        "framer-motion": "12.0.0-alpha.1",
+        "framer-motion": "12.18.1",
         "is-dark-color": "^1.2.0",
         "memoize-one": "^6.0.0",
-        "next": "15.3.2",
+        "next": "15.3.3",
         "next-plausible": "^3.12.4",
         "react": "19.1.0",
         "react-colorful": "^5.6.1",
@@ -58,7 +58,7 @@
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@next/bundle-analyzer": "15.3.2",
+        "@next/bundle-analyzer": "15.3.3",
         "@svgr/webpack": "^8.1.0",
         "@types/react": "^19.1.3",
         "@types/react-dom": "^19.1.3",
