return '{}' as that may be less weird than null

--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -69,6 +69,6 @@ server {
     location @backend_down {
         add_header X-Backend-Down true always;
         default_type application/json;
-        return 200 'null';
+        return 200 '{}';
     }
 }
