--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -131,7 +131,7 @@ server {
     location @backend_down {
         add_header X-Backend-Down true always;
         default_type application/json;
-        return 200 'null';
+        return 200 '{}';
     }
 }
 # {{HTTPS_SERVER_BLOCK_END}}
