Don't explode when backend is unavailable (#1660)
* Don't explode when backend is unavailable

* return '{}' as that may be less weird than null

* Don't choke on CloudFlare HTML response

* CloudFlare -> Cloudflare (rebranded in 2016, who knew)

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -129,8 +129,9 @@ server {
 
     # Avoid returning HTML from the /api endpoint if backend is unavailable
     location @backend_down {
+        add_header X-Backend-Down true always;
         default_type application/json;
-        return 200 '';
+        return 200 '{}';
     }
 }
 # {{HTTPS_SERVER_BLOCK_END}}
