cleanup (still failing the test but it's somethin)

--- a/backend/docker.dev.env
+++ b/backend/docker.dev.env
@@ -5,3 +5,7 @@ ALLOWED_HOSTS="backend,localhost,127.0.0.1"
 USE_SANDBOX_JAIL="on"
 SANDBOX_DISABLE_PROC="true"
 MEDIA_URL=http://localhost/media/
+
+# Cromper settings
+CROMPER_URL=http://localhost:8888
+
