--- a/cromper/.env
+++ b/cromper/.env
@@ -1,15 +1,15 @@
 # Cromper Configuration
 CROMPER_PORT=8888
-CROMPER_DEBUG=false
+CROMPER_DEBUG=true
 
 # Copy relevant settings from Django backend
-USE_SANDBOX_JAIL=on
+USE_SANDBOX_JAIL=true
 SANDBOX_DISABLE_PROC=true
-COMPILER_BASE_PATH=compilers
-LIBRARY_BASE_PATH=libraries
+COMPILER_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/compilers
+LIBRARY_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/libraries
 COMPILATION_TIMEOUT_SECONDS=10
 ASSEMBLY_TIMEOUT_SECONDS=3
 WINEPREFIX=/tmp/wine
-SANDBOX_NSJAIL_BIN_PATH=/bin/nsjail
+SANDBOX_NSJAIL_BIN_PATH=nsjail
 SANDBOX_TMP_PATH=/tmp/sandbox
 SANDBOX_CHROOT_PATH=/tmp/sandbox/root
