--- a/cromper/pyproject.toml
+++ b/cromper/pyproject.toml
@@ -8,15 +8,18 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-tornado = "^6.4"
-requests = "^2.32.3"
+tornado = "^6.5.2"
+requests = "^2.32.5"
 python-dotenv = "^1.0.0"
 m2c = {git="https://github.com/matt-kempster/m2c.git"}
 asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
-mypy = "^1.13.0"
+mypy = "^1.18.2"
+pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
+pytest-tornado = "^0.8.1"
+ruff = "^0.13.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
