--- a/cromper/pyproject.toml
+++ b/cromper/pyproject.toml
@@ -1,29 +1,35 @@
-[tool.poetry]
+[project]
 name = "cromper"
 version = "0.1.0"
 description = "Async compilation and assembly service for decomp.me"
-authors = ["Decomp.me team"]
-license = "MIT"
-package-mode = false
+authors = [
+    {name = "Decomp.me team"}
+]
+license = {text = "MIT"}
+requires-python = ">=3.10"
+dependencies = [
+    "tornado>=6.5.2",
+    "requests>=2.32.5",
+    "python-dotenv>=1.0.0",
+    "m2c @ git+https://github.com/matt-kempster/m2c.git",
+    "asm-differ @ git+https://github.com/simonlindholm/asm-differ.git",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-tornado = "^6.5.2"
-requests = "^2.32.5"
-python-dotenv = "^1.0.0"
-m2c = {git="https://github.com/matt-kempster/m2c.git"}
-asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.18.2"
-pytest = "^8.4.2"
-pytest-asyncio = "^1.2.0"
-pytest-tornado = "^0.8.1"
-ruff = "^0.13.1"
+[project.optional-dependencies]
+dev = [
+    "mypy>=1.18.2",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-tornado>=0.8.1",
+    "ruff>=0.13.1",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.black]
 line-length = 88
