--- a/backend/docker.dev.env
+++ b/backend/docker.dev.env
@@ -2,10 +2,8 @@ DATABASE_URL=psql://decompme:decompme@postgres:5432/decompme
 SECRET_KEY="django-insecure-nm#!8%zhc0wwi#m_*l9l)=m*6gs4&o_^-e5b5vj*k05&yaqc1"
 DEBUG="on"
 ALLOWED_HOSTS="backend,localhost,127.0.0.1"
-USE_SANDBOX_JAIL="on"
-SANDBOX_DISABLE_PROC="true"
 MEDIA_URL=http://localhost/media/
 
 # Cromper settings
-CROMPER_URL=http://localhost:8888
+CROMPER_URL=http://cromper:8888
 
