--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -24,9 +24,7 @@ files =
     coreapp/**/*.py,
     decompme/**/*.py
 
-exclude =
-    compilers,
-    manage.py
+exclude = manage.py
 
 plugins =
     mypy_django_plugin.main,
