--- a/cromper/pyproject.toml
+++ b/cromper/pyproject.toml
@@ -33,3 +33,10 @@ allow-direct-references = true
 
 [tool.black]
 line-length = 88
+
+[tool.mypy]
+python_version = "3.10"
+ignore_missing_imports = true
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
