--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -14,19 +14,11 @@ RUN apt-get update \
     software-properties-common \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -sSL https://install.python-poetry.org/ | \
-    POETRY_VERSION=2.2.0 \
-    POETRY_HOME=/etc/poetry \
-    python3.12 -
-
-ENV POETRY_VIRTUALENVS_PATH=/virtualenvs
-
-ENV PATH="${PATH}:/etc/poetry/bin"
+COPY --from=ghcr.io/astral-sh/uv:0.8.18 /uv /bin/uv
 
 WORKDIR /backend
 
-COPY --from=poetry /virtualenvs /virtualenvs
-COPY pyproject.toml poetry.lock /backend/
+COPY pyproject.toml uv.lock /backend/
 
 COPY manage.py /backend
 COPY db_housekeeping.py /backend
