--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,8 +16,7 @@ RUN apt-get update \
 
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
-ENV PATH="/root/.cargo/bin:${PATH}"
-
+ENV PATH="/root/.local/bin:${PATH}"
 
 FROM base AS nsjail
 
