--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,9 +14,7 @@ RUN apt-get update \
     software-properties-common \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-
-ENV PATH="/root/.local/bin:${PATH}"
+RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="/etc/" sh
 
 FROM base AS nsjail
 
