--- a/.github/workflows/chores.yaml
+++ b/.github/workflows/chores.yaml
@@ -19,13 +19,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - name: Install Poetry
-        run: pip install poetry==2.2.0
+      - name: Install uv
+        run: pip install uv
 
       - name: Update m2c & asm-differ
-        run: cd backend && poetry update m2c asm-differ
+        run: cd backend && uv pip install --upgrade m2c asm-differ
 
       - name: Check for changes
         run: |
@@ -37,8 +37,8 @@ jobs:
       - name: Commit changes
         uses: peter-evans/create-pull-request@v6
         with:
-          commit-message: "🤖 (chore): bump m2c & asm-differ to latest"
-          title: "🤖 (chore): bump m2c & asm-differ to latest"
+          commit-message: "🤖 (chore): bump m2c / asm-differ to latest"
+          title: "🤖 (chore): bump m2c / asm-differ to latest"
           branch: "update-m2c-asm-differ"
           delete-branch: true
           committer: "GitHub Actions <actions@github.com>"
